# netget

./: .gitignore  ACTION_DEFINITION_IMPROVEMENTS.md  ANDROID_NATIVE_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BATCH3_MOCKS_SUMMARY.md  BLUETOOTH_BLE_BEACON_FIX_SUMMARY.md  BLUETOOTH_EXPLORATION.md  CLAUDE.md  CLIENT_IMPLEMENTATION_PLAN.md  CLIENT_PROTOCOL_FEASIBILITY.md  COLOR_SCHEME.md  COMMIT_MESSAGE.md  COMPILATION_ERROR_REPORT.md  COMPILATION_FIX_PROMPT.md  Cargo.toml  DYNAMIC_EXAMPLES_ANALYSIS.md  DYNAMIC_EXAMPLES_IMPLEMENTATION_STATUS.md  DYNAMIC_EXAMPLES_PROGRESS.md  E2E_REPORT.md  E2E_TEST_ISSUES_REPORT.md  E2E_TEST_RUNNER.md  FIX_PROMPTS.md  FIX_SUMMARY.md  IMAP_COMPILATION_STATUS.md  IMAP_IMPLEMENTATION.md  IMAP_NEXT_STEPS.md  IMAP_STATUS.md  INSTANCE_15_FIXES_SUMMARY.md  INSTANCE_39_BLUETOOTH_BLE_REPORT.md  INSTANCE_5_SUMMARY.md  INTERFACE_PROTOCOL_ARCHITECTURE.md  IPSEC_RESEARCH.md  KAFKA_TEST_FIXES.md  LICENSE_ANALYSIS.md  METADATA_EXAMPLES.md  METADATA_MIGRATION.md  MOCK_BATCH1_COMPLETE.md  MOCK_BATCH1_STATUS.md  MOCK_BATCHES.md  (+87 more)
.cargo/: config.toml
.claude/: settings.json
docs/: CLAUDE_CODE_WEB_LIMITATIONS.md  E2E_EXAMPLE_TESTS_PLAN.md  EMBEDDED_LLM_PLAN.md  MYSQL_TOOL_CALL_TESTS.md  README_SSH_AGENT.md  SSH_AGENT_IMPLEMENTATION_STRATEGY.md  SSH_AGENT_PROTOCOL_RESEARCH.md  SSH_AGENT_QUICK_REFERENCE.md  TESTING_WITH_MOCKS.md  TOOL_CALLS.md  TOOL_CALLS_QUICKSTART.md  WEB_SEARCH_INTEGRATION_TESTS.md  chain_of_thought_plan.md  index.html
docs/agent-enhancement/: README.md  implementation-guide.md  phase-1-conversation-history.md  phase-2-prompt-template-system.md  phase-3-event-instructions.md  phase-4-user-agent-config.md  phase-5-test-framework.md  phase-5-testing-framework.md  phase-6-script-integration.md
docs/css/: style.css
docs/js/: main.js
docs/sccache/: README.md  SCCACHE_QUICKSTART.md  SCCACHE_REMOTE_EXPLORATION.md
examples/: test_doc_gen.rs  test_schema.rs
examples/external_protocol/: Cargo.toml  README.md
examples/external_protocol/src/: lib.rs
prompts/easy_request/: http.hbs  main.hbs
prompts/feedback/: main.hbs  task.hbs
prompts/network_request/: main.hbs  task.hbs
prompts/user_input/: main.hbs  task.hbs
proto/etcd/: rpc.proto
scripts/: add_console_imports.py  migrate_dual_logging.py
scripts/sccache/: cargo-sccache.sh  setup-sccache-r2.sh  setup-sccache-upstash.sh
src/: docs.rs  lib.rs  logging.rs  main.rs  privilege.rs  settings.rs  system_stats.rs
src/cli/: args.rs  banner.rs  client_startup.rs  easy_startup.rs  input_state.rs  mod.rs  non_interactive.rs  rolling_tui.rs  server_startup.rs  setup.rs  sticky_footer.rs  terminal_cleanup.rs  theme.rs  tui.rs
src/client/: mod.rs
src/display/: ascii.rs  canvas.rs  mod.rs  text.rs  types.rs
src/easy/: mod.rs
src/events/: errors.rs  handler.rs  mod.rs  types.rs
src/llm/: action_helper.rs  actions.rs  client.rs  config.rs  conversation.rs  conversation_state.rs  default_instructions.rs  embedded_inference.rs  event_handler_executor.rs  event_instructions.rs  hybrid_manager.rs  mod.rs  model_selection.rs  old_actions.rs  ollama_client.rs  prompt.rs  rate_limiter.rs  reference_parser.rs  response_handler.rs  template_engine.rs
src/logging/: patterns.rs
src/network/: connection.rs  datalink.rs  datalink_actions.rs  dhcp.rs  dhcp_actions.rs  dns.rs  dns_actions.rs  http.rs  http_actions.rs  ipp.rs  ipp_actions.rs  irc.rs  irc_actions.rs  mdns.rs  mdns_actions.rs  mod.rs  mysql.rs  mysql_actions.rs  nfs.rs  nfs_actions.rs  ntp.rs  ntp_actions.rs  packet.rs  postgresql.rs  postgresql_actions.rs  proxy.rs  proxy_actions.rs  proxy_filter.rs  redis.rs  redis_actions.rs  server_trait.rs  sftp_handler.rs  smtp.rs  smtp_actions.rs  snmp.rs  snmp_actions.rs  ssh.rs  ssh_actions.rs  tcp.rs  tcp_actions.rs  (+6 more)
src/protocol/: base_stack.rs  base_stack.rs.backup  base_stack.rs.bak2  base_stack.rs.bak3  base_stack.rs.orig  base_stack.rs.rej  binding_defaults.rs  client_registry.rs  connect_context.rs  dependencies.rs  easy_registry.rs  event_logger.rs  event_type.rs  log_template.rs  metadata.rs  mod.rs  registry.rs  server_registry.rs  spawn_context.rs
src/scripting/: environment.rs  event_handler.rs  executor.rs  highlight.rs  manager.rs  mod.rs  types.rs
src/server/: connection.rs  mod.rs  socket_helpers.rs  tls_cert_manager.rs
src/state/: app_state.rs  client.rs  easy.rs  machine.rs  mod.rs  server.rs  sqlite.rs  task.rs
src/testing/: mock_builder.rs  mock_config.rs  mod.rs
src/ui/: app.rs  app_old.rs  events.rs  layout.rs  mod.rs
src/utils/: mod.rs  save_load.rs
tests/: OLLAMA_MODEL_TESTING.md  README.md  action_summary_test.rs  base_stack_test.rs  client.rs  datalink_integration_test.rs  datalink_test.rs  docs_output_test.rs  docs_tui_test.rs  e2e_bgp_test.rs  e2e_cassandra_test.rs  e2e_datalink_test.rs  e2e_dns_test.rs  e2e_dynamo_aws_sdk_test.rs  e2e_dynamo_test.rs  e2e_elasticsearch_test.rs  e2e_footer_test.rs  e2e_http_test.rs  e2e_imap_client_test.rs  e2e_imap_client_test_README.md  e2e_ipp_test.rs  e2e_ipsec_test.rs  e2e_irc_test.rs  e2e_mdns_test.rs  e2e_nfs_test.rs  e2e_ntp_test.rs  e2e_openai_test.rs  e2e_openvpn_test.rs  e2e_postgresql_test.rs  e2e_redis_test.rs  e2e_smb_test.rs  e2e_snmp_test.rs  e2e_socks5_test.rs  e2e_ssh_irc_test.rs  e2e_ssh_test.rs  e2e_stun_test.rs  e2e_tcp_test.rs  e2e_turn_test.rs  e2e_udp_test.rs  e2e_wireguard_test.rs  (+31 more)
tests/client/: helpers.rs  mod.rs
tests/common/: mod.rs
tests/e2e/: helpers.rs  http_test.rs  mod.rs  netget_wrapper.rs  tcp_test.rs
tests/examples/: coverage_test.rs  dns_examples_test.rs  http_examples_test.rs  mod.rs  protocol_examples_test.rs  tcp_examples_test.rs
tests/fixtures/: mysql_prompt.txt  schema.json  schema.sql  users_data.json
tests/helpers/: client.rs  common.rs  event_trigger.rs  example_test_framework.rs  mock.rs  mock_builder.rs  mock_config.rs  mock_matcher.rs  mock_ollama.rs  mod.rs  netget.rs  ollama_test_builder.rs  server.rs
tests/prompt/: mod.rs  update_snapshots.sh
tests/prompt_snapshots/: http_easy_test.rs  mod.rs
tests/server/: helpers.rs  mod.rs
(+1380 files in other folders)
