[package]
name = "netget"
version = "0.1.0"
edition = "2021"

[features]
default = ["all-protocols"]
tcp = ["async-trait"]
http = []
pypi = []  # PyPI (Python Package Index) uses HTTP, no extra deps (PEP 503 Simple Repository API)
maven = []  # Maven repository server (HTTP-based artifact distribution)
udp = []
datalink = []  # DataLink uses only pcap, no extra deps
arp = ["pnet"]  # ARP (Address Resolution Protocol) uses pnet for packet handling
dns = ["hickory-server", "hickory-proto"]
dot = ["dns", "hickory-server/dns-over-rustls", "hickory-proto/dns-over-rustls", "dep:rustls", "dep:tokio-rustls", "dep:rcgen"]  # DNS-over-TLS server
doh = ["dns", "hickory-server/dns-over-https-rustls", "hickory-proto/dns-over-https-rustls", "dep:rustls", "dep:tokio-rustls", "dep:rcgen", "dep:h2"]  # DNS-over-HTTPS server
dhcp = ["dhcproto"]
ntp = []  # NTP uses only standard UDP, no extra deps
snmp = ["rasn-snmp", "rasn"]
syslog = ["syslog_loose"]
ssh = ["russh", "russh-keys", "russh-sftp", "async-trait"]
irc = []  # IRC uses only TCP, no extra deps
xmpp = []  # XMPP uses only TCP, no extra deps (manual XML stream handling)
telnet = ["nectar"]
smtp = ["rust-smtp-server"]
mdns = ["mdns-sd"]
mysql = ["dep:opensrv-mysql", "async-trait"]
ipp = ["dep:ipp"]
postgresql = ["dep:pgwire", "async-trait"]
redis = ["dep:redis-protocol"]
proxy = ["http-mitm-proxy", "dep:rcgen", "tokio-native-tls", "native-tls"]
webdav = ["dav-server"]
nfs = ["nfsserve"]
cassandra = ["dep:cassandra-protocol", "tcp"]
smb = ["smb-msg"]
stun = ["dep:webrtc-stun"]
turn = ["dep:webrtc-turn"]
sip = []  # SIP uses only UDP, no extra deps (manual protocol implementation)
ldap = ["dep:ldap3_proto", "rasn"]
imap = ["imap-codec"]  # IMAP uses imap-codec for protocol parsing
mqtt = ["dep:rumqttd"]  # MQTT broker for IoT messaging
socks5 = []  # SOCKS5 uses only TCP, no extra deps
elasticsearch = []  # Elasticsearch uses only HTTP, no extra deps
dynamo = []  # DynamoDB uses only HTTP, no extra deps
s3 = []  # S3-compatible object storage server (LLM-controlled responses, no storage)
sqs = []  # AWS SQS (Simple Queue Service) uses only HTTP, no extra deps
npm = []  # NPM registry server uses only HTTP, no extra deps
openai = []  # OpenAI API uses only HTTP, no extra deps
jsonrpc = []  # JSON-RPC 2.0 server uses only HTTP, no extra deps
wireguard = ["dep:defguard_wireguard_rs", "dep:x25519-dalek"]  # Full WireGuard VPN server with LLM control
openvpn = []  # OpenVPN honeypot (packet detection only, no full crypto)
ipsec = []  # IPSec/IKEv2 honeypot (packet detection only, no full crypto)
bgp = ["netgauze-bgp-pkt"]  # BGP routing protocol
isis = []  # IS-IS routing protocol (Intermediate System to Intermediate System)
rip = []  # RIP (Routing Information Protocol) v2 - distance-vector routing
mcp = ["dep:axum", "dep:tower-http", "async-trait"]  # Model Context Protocol (JSON-RPC 2.0 over HTTP/SSE)
grpc = ["dep:tonic", "dep:prost", "dep:prost-reflect", "dep:prost-types", "dep:tonic-reflection", "async-trait"]  # gRPC server with dynamic schema support
etcd = ["grpc"]  # etcd v3 key-value store server (KV service via gRPC)
xmlrpc = ["quick-xml"]  # XML-RPC server with LLM-controlled method execution
tor = ["dep:tor-netdoc", "dep:tor-cert", "dep:tor-cell", "dep:rustls", "dep:tokio-rustls", "dep:rcgen", "dep:ed25519-dalek", "dep:x25519-dalek", "dep:sha2", "dep:aes", "dep:ctr", "dep:hmac", "dep:hkdf"]  # Tor directory mirror and OR protocol relay (Guard/Middle/Exit) with cell handling
vnc = ["dep:rfb", "async-trait"]  # VNC server with LLM-controlled display generation
openapi = ["dep:openapi-rs", "dep:matchit", "async-trait"]  # OpenAPI 3.1 server with runtime request validation and route matching
git = []  # Git Smart HTTP server with LLM-controlled virtual repositories
kafka = ["dep:kafka-protocol"]  # Apache Kafka broker with LLM-controlled message routing
torrent-tracker = ["dep:serde_bencode"]  # BitTorrent Tracker (HTTP-based peer discovery with announce/scrape)
torrent-dht = ["dep:serde_bencode"]  # BitTorrent DHT (Kademlia-based distributed peer discovery)
torrent-peer = ["dep:serde_bencode"]  # BitTorrent Peer Wire Protocol (peer-to-peer data transfer)
all-protocols = [
    "tcp",
    "http",
    "pypi",
    "maven",
    "udp",
    "datalink",
    "arp",
    "dns",
    "dot",
    "doh",
    "dhcp",
    "ntp",
    "snmp",
    "syslog",
    "ssh",
    "irc",
    "xmpp",
    "telnet",
    "smtp",
    "mdns",
    "mysql",
    "ipp",
    "postgresql",
    "redis",
    "proxy",
    "webdav",
    "nfs",
    "cassandra",
    "smb",
    "stun",
    "turn",
    "sip",
    "ldap",
    "imap",
    "mqtt",
    "socks5",
    "elasticsearch",
    "dynamo",
    "s3",
    "sqs",
    "npm",
    "openai",
    "jsonrpc",
    "wireguard",
    "openvpn",
    "ipsec",
    "bgp",
    "isis",
    "rip",
    "mcp",
    "grpc",
    "xmlrpc",
    "tor",
    "vnc",
    "openapi",
    "git",
    "kafka",
    "etcd",
    "torrent-tracker",
    "torrent-dht",
    "torrent-peer",
]
e2e-tests = []  # Feature flag for E2E tests

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Terminal UI - using crossterm for rolling terminal
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
textwrap = "0.16"
termbg = "0.5"  # Terminal background detection for adaptive theming

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json"] }

# Ollama Rust client
ollama-rs = "0.3"

# HTTP server
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Byte manipulation
bytes = "1.8"
hex = "0.4"
base64 = "0.22"

# Socket options (SO_REUSEADDR)
socket2 = "0.5"

# File locking for cross-process synchronization
fs2 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting for script code
syntect = "5.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "formatting"] }  # Time handling for rcgen certificates
url = "2.5"  # URL parsing for web approval prompts
regex = "1.11"
urlencoding = "2.1"
html2text = "0.12"
once_cell = "1.20"
rand = "0.8"  # Random number generation for crypto
handlebars = "5.1"
walkdir = "2.4"
include_dir = "0.7"  # Embed template directory in binary

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Home directory
dirs = "5.0"

# Packet capture (libpcap)
pcap = "2.2"

# ARP (Address Resolution Protocol) packet handling
pnet = { version = "0.35", optional = true }

# DNS server (Hickory DNS, formerly Trust-DNS)
hickory-server = { version = "0.24", optional = true }
hickory-proto = { version = "0.24", optional = true }

# TLS support for DoT and DoH
rustls = { version = "0.23", features = ["ring"], optional = true }
tokio-rustls = { version = "0.26", optional = true }

# HTTP/2 support for DoH
h2 = { version = "0.4", optional = true }

# DHCP server
dhcproto = { version = "0.12", optional = true }

# SNMP agent
rasn-snmp = { version = "0.18", optional = true }
rasn = { version = "0.18", optional = true }

# Syslog server
syslog_loose = { version = "0.22", optional = true }

# SSH server
russh = { version = "0.45", optional = true }
russh-keys = { version = "0.45", optional = true }
russh-sftp = { version = "2.1", optional = true }
async-trait = { version = "0.1", optional = true }

# Telnet server
nectar = { version = "0.4", optional = true }

# SMTP server
rust-smtp-server = { version = "0.1", optional = true }

# mDNS/DNS-SD service discovery
mdns-sd = { version = "0.15", optional = true }

# MySQL server
opensrv-mysql = { version = "0.7", optional = true }

# IPP (Internet Printing Protocol)
ipp = { version = "5.3", optional = true }

# PostgreSQL server
pgwire = { version = "0.25", optional = true }

# Redis server (RESP protocol)
redis-protocol = { version = "6.0", optional = true }

# HTTP Proxy (MITM)
http-mitm-proxy = { version = "0.16", optional = true }
rcgen = { version = "0.13", optional = true }  # For certificate generation
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }

# WebDAV server
dav-server = { version = "0.8", optional = true }

# NFS server
nfsserve = { version = "0.10", optional = true }

# Cassandra/CQL server
cassandra-protocol = { version = "3.3", optional = true }

# SMB server (message parsing)
smb-msg = { version = "0.10", optional = true }

# STUN server (Session Traversal Utilities for NAT)
webrtc-stun = { version = "0.1", optional = true }

# TURN server (Traversal Using Relays around NAT)
webrtc-turn = { version = "0.1", optional = true }

# LDAP server (ASN.1 BER encoding for LDAP protocol)
ldap3_proto = { version = "0.3", optional = true }
# rasn is already included via snmp feature, but we explicitly depend on it for LDAP too

# IMAP server (IMAP protocol parsing)
imap-codec = { version = "2.0.0-alpha.6", optional = true }

# MQTT broker (IoT messaging)
rumqttd = { version = "0.20", optional = true }

# BGP server (Border Gateway Protocol)
netgauze-bgp-pkt = { version = "0.7", optional = true, features = ["serde", "codec"] }

# WireGuard VPN server (full implementation with LLM control)
defguard_wireguard_rs = { version = "0.7", optional = true, features = ["serde"] }
x25519-dalek = { version = "2.0", optional = true }  # For WireGuard key generation

# MCP (Model Context Protocol) server
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true, features = ["fs", "trace"] }
uuid = { version = "1.11", features = ["v4"] }

# gRPC server with dynamic schema support
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-reflect = { version = "0.14", optional = true }
prost-types = { version = "0.13", optional = true }
tonic-reflection = { version = "0.12", optional = true }

# XML-RPC server (XML parsing for RPC protocol)
quick-xml = { version = "0.37", optional = true, features = ["serialize"] }

# Tor directory mirror (Tor protocol parsing and generation)
tor-netdoc = { version = "0.36", optional = true }  # Tor network document parsing (consensus, descriptors)
tor-cert = { version = "0.36", optional = true }  # Tor certificate handling

# Tor relay (OR protocol cell handling and cryptography)
tor-cell = { version = "0.36", optional = true }  # Tor cell encoding/decoding (RELAY, CREATE, etc.)
ed25519-dalek = { version = "2.1", optional = true }  # Ed25519 signatures for relay identity
sha2 = { version = "0.10", optional = true }  # SHA-256 for ntor handshake
aes = { version = "0.8", optional = true }  # AES for relay cell encryption
ctr = { version = "0.9", optional = true }  # CTR mode for AES
hmac = { version = "0.12", optional = true }  # HMAC for ntor authentication
hkdf = { version = "0.12", optional = true }  # HKDF for key derivation in ntor
# x25519-dalek already used by wireguard feature, don't redeclare
# tokio-rustls already available, don't redeclare
# rcgen already used by proxy feature, don't redeclare

# Display module (for VNC and other protocols requiring image generation)
tiny-skia = "0.11"  # 2D graphics rendering
cosmic-text = "0.12"  # Text rendering with font support
image = "0.25"  # Image buffer manipulation
sys-locale = "0.3"  # System locale detection for text rendering

# VNC server (Remote Frame Buffer protocol)
rfb = { version = "0.1", optional = true }

# OpenAPI 3.1 server (runtime request validation and route matching)
openapi-rs = { git = "https://github.com/baerwang/openapi-rs", optional = true }
matchit = { version = "0.8", optional = true }  # High-performance path router for OpenAPI

# Kafka broker (wire protocol parsing and serialization)
kafka-protocol = { version = "0.14", optional = true }  # Code-generated Kafka protocol support

# BitTorrent protocols (bencode encoding/decoding)
serde_bencode = { version = "0.2", optional = true }  # Bencode serialization for BitTorrent protocols

[dev-dependencies]
# For async tests
tokio-test = "0.4"
# For e2e test setup/teardown
ctor = "0.2"
# For temporary directories in tests
tempfile = "3.13"

# Terminal snapshot testing
pty-process = "0.4"
vt100 = "0.15"

# E2E test dependencies (only used when protocol features are enabled via test files' cfg gates)
# FTP client for e2e integration tests
suppaftp = "6.0"
# For process management in e2e tests (Unix signals) and PTY window size
nix = { version = "0.29", features = ["signal", "process", "term", "ioctl"] }
# SNMP client for e2e integration tests
snmp = "0.2"
# DNS client for e2e integration tests (Hickory DNS, formerly Trust-DNS)
# Includes TLS features for DoT and DoH testing
hickory-client = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls"] }
# NTP client for e2e integration tests
rsntp = "4.0"
# SSH client for e2e integration tests
ssh2 = "0.9"
# IRC client for e2e integration tests
irc = "1.1"
# SMTP client for e2e integration tests
lettre = "0.11"
# MySQL client for e2e integration tests
mysql_async = "0.34"
# PostgreSQL client for e2e integration tests
tokio-postgres = "0.7"
# Redis client for e2e integration tests
redis = { version = "0.27", features = ["tokio-comp"] }
# WebDAV client for e2e integration tests
reqwest_dav = "0.2"
# NFS client for e2e integration tests
nfs3_client = "0.7"
# Cassandra/CQL client for e2e integration tests
scylla = "1.3"
# LDAP client for e2e integration tests
ldap3 = "0.11"
# IMAP client for e2e integration tests
async-imap = "0.11"
async-native-tls = "0.5"
# AWS SDK for DynamoDB e2e integration tests
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.52"
# AWS SDK for SQS e2e integration tests
aws-sdk-sqs = "1.86"
# rust-s3 client for S3 e2e integration tests
rust-s3 = "0.37"
# Axum for creating test HTTP servers in proxy e2e tests
axum = "0.7"
# Axum server with TLS support for HTTPS test servers
axum-server = { version = "0.6", features = ["tls-rustls"] }
# OpenAI client for e2e integration tests
async-openai = "0.26"
# gRPC client dependencies for e2e integration tests
prost = "0.13"
prost-reflect = "0.14"
prost-types = "0.13"
# etcd client for e2e integration tests
etcd-client = "0.15"
# Tor client for e2e integration tests (Tor relay + directory)
arti-client = "0.36"
tor-rtcompat = "0.36"
# Git client for e2e integration tests
git2 = "0.19"
# AMQP 1.0 client for e2e integration tests
rumqttc = "0.24"
# Kafka client for e2e integration tests
rdkafka = "0.36"
# BitTorrent client for e2e integration tests
# Using cratetorrent library for programmatic testing, also supports transmission-cli/aria2
sha1 = "0.10"  # For info_hash calculation

[build-dependencies]
# Protocol buffer compiler for etcd gRPC service
tonic-build = "0.12"
